--- a/studio_2015/templates/project_shot.xml
+++ b/studio_2015/templates/project_shot.xml
@@ -1,142 +1,138 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE dirtt PUBLIC "-//STUDIO//DTD dirtt 0.2.0//EN" "http://robmoggach.github.io/python-dirtt/dtds/dirtt.dtd">
 
-<dirtt name="Shot Media Tree" version="0.2.0" dirname="{{project_root}}/{{project_path}}/media/{{sequence_name}}" basename="{{shot_name}}" username="pipeline" group="artist" perms="02775">
-  <!-- A U D I O   F O L D E R -->
-  <dir name="Audio Directory" basename="audio" username="pipeline" group="artist" perms="02775"/>
-  <!-- C G   R E N D E R   F O L D E R -->
-  <dir name="CG Renders Directory" basename="cg" username="pipeline" group="artist" perms="02775">
-    <dir basename="volumetrics" username="pipeline" group="artist" perms="02755">
-      <dir basename="bty" username="pipeline" group="artist" perms="02775" />
-      <dir basename="zt" username="pipeline" group="artist" perms="02775" />
-      <dir basename="env" username="pipeline" group="artist" perms="02775" />
-    </dir>
-  </dir>
-  <!-- C O M P   F O L D E R -->
-  <dir name="Comp Directory" basename="comp" username="pipeline" group="artist" perms="02775"/>
-  <!-- P R E C O M P   F O L D E R -->
-  <dir name="Pre-comp Directory" basename="precomp" username="pipeline" group="artist" perms="02775"/>
-  <!-- R E F E R E N C E   F O L D E R -->
-  <dir name="Reference Directory" basename="ref" username="pipeline" group="artist" perms="02775"/>
-  <!-- R O T O   F O L D E R -->
-  <dir name="Roto Directory" basename="roto" username="pipeline" group="artist" perms="02775"/>
-  <!-- P A I N T   F O L D E R -->
-  <dir name="Paint Directory" basename="paint" username="pipeline" group="artist" perms="02775"/>
-  <!-- G R A D E   F O L D E R -->
-  <dir name="Grade Directory" basename="grade" username="pipeline" group="artist" perms="02775"/>
-  <!-- S C A N   F O L D E R -->
-  <dir name="Scans Directory" basename="scan" username="pipeline" group="artist" perms="02775"/>
-</dirtt>
+<dirtt name="Project Root" version="0.2.0" dirname="{{project_root}}" basename="{{project_path}}" username="pipeline" group="artist" perms="02775">
 
-
-<dirtt name="Shot Work Tree" version="0.2.0" dirname="{{project_root}}/{{project_path}}/work/{{sequence_name}}" basename="{{shot_name}}" username="pipeline" group="artist" perms="02775">
-
-  <!-- M E D I A   F O L D E R -->
-  <link basename="media" ref="../../../../media/{{sequence_name}}/{{shot_name}}"/>
-
-  <!-- I M A G E S   F O L D E R -->
-  <dir basename="images" username="pipeline" group="supervisor" perms="02775">
-    <link basename="master" ref="../../master/images"/>
-    <dir basename="cg" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="comp" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="design" username="pipeline" group="artist" perms="02775">
-      <link basename="master" ref="../../../master/images/design"/>
-    </dir>
-    <dir basename="paint" username="pipeline" group="artist" perms="02775">
-      <link basename="master" ref="../../../master/images/paint"/>
-    </dir>
-    <dir basename="plates" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="textures" username="pipeline" group="artist" perms="02775">
-      <link basename="master" ref="../../../master/images/textures"/>
-      <dir basename="3dPaintTextures" username="pipeline" group="artist" perms="02775"/>
-    </dir>
-    <dir basename="survey" username="pipeline" group="artist" perms="02775">
-      <dir basename="hdri" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="char" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="env" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="prop" username="pipeline" group="artist" perms="02775"/>
-    </dir>
-  </dir>
-
-  <!-- D A T A   F O L D E R -->
-  <dir name="Shot Data Folder" basename="data" username="pipeline" group="artist" perms="02775">
-    <dir basename="cache" username="pipeline" group="artist" perms="02775">
-      <dir basename="fluid" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="houdini" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="volumetrics" username="pipeline" group="artist" perms="02775"/>
-    </dir>
-    <dir basename="renderData" username="pipeline" group="artist" perms="02775">
-      <dir basename="depth" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="fur" username="pipeline" group="artist" perms="02775">
-        <dir basename="furFiles" username="pipeline" group="artist" perms="02775"/>
-        <dir basename="furShadowMap" username="pipeline" group="artist" perms="02775"/>
-        <dir basename="furAttrMap" username="pipeline" group="artist" perms="02775"/>
-        <dir basename="furImages" username="pipeline" group="artist" perms="02775"/>
-        <dir basename="furEqualMap" username="pipeline" group="artist" perms="02775"/>
+  <dir name="Shot Media Tree" basename="media/{{sequence_name}}/{{shot_name}}"  username="pipeline" group="artist" perms="02775">
+    <!-- A U D I O   F O L D E R -->
+    <dir name="Audio Directory" basename="audio" username="pipeline" group="artist" perms="02775"/>
+    <!-- C G   R E N D E R   F O L D E R -->
+    <dir name="CG Renders Directory" basename="cg" username="pipeline" group="artist" perms="02775">
+      <dir basename="volumetrics" username="pipeline" group="artist" perms="02755">
+        <dir basename="bty" username="pipeline" group="artist" perms="02775" />
+        <dir basename="zt" username="pipeline" group="artist" perms="02775" />
+        <dir basename="env" username="pipeline" group="artist" perms="02775" />
       </dir>
-      <dir basename="mentalRay" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="iprImages" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="shaders" username="pipeline" group="artist" perms="02775"/>
     </dir>
-    <dir basename="particles" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="camera" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="chan" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="geo" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="lut" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="mocap" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="moco" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="timewarp" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="volumetrics" username="pipeline" group="artist" perms="02755">
-      <dir basename="particles" username="pipeline" group="artist" perms="02775" />
-      <dir basename="cache" username="pipeline" group="artist" perms="02775" />
-    </dir>
+    <dir basename="comp" username="pipeline" group="artist" perms="02775"/>
+    <dir basename="precomp" username="pipeline" group="artist" perms="02775"/>
+    <dir basename="ref" username="pipeline" group="artist" perms="02775"/>
+    <dir basename="roto" username="pipeline" group="artist" perms="02775"/>
+    <dir basename="paint" username="pipeline" group="artist" perms="02775"/>
+    <dir basename="grade" username="pipeline" group="artist" perms="02775"/>
+    <dir basename="scan" username="pipeline" group="artist" perms="02775"/>
   </dir>
-  <!-- T O O L S   F O L D E R -->
-  <dir basename="tools" username="pipeline" group="artist" perms="02775">
-    <dir basename="maya" username="pipeline" group="artist" perms="02775">
-      <dir basename="mel" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="python" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="shelves" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="modules" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="templates" username="pipeline" group="artist" perms="02775"/>
+
+  <dir name="Shot Tree" basename="work/{{sequence_name}}/{{shot_name}}"  username="pipeline" group="artist" perms="02775">
+    <!-- M E D I A   F O L D E R -->
+    <link basename="media" ref="../../../../media/{{sequence_name}}/{{shot_name}}"/>
+
+    <!-- I M A G E S   F O L D E R -->
+    <dir basename="images" username="pipeline" group="supervisor" perms="02775">
+      <link basename="master" ref="../../master/images"/>
+      <dir basename="cg" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="comp" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="design" username="pipeline" group="artist" perms="02775">
+        <link basename="master" ref="../../../master/images/design"/>
+      </dir>
+      <dir basename="paint" username="pipeline" group="artist" perms="02775">
+        <link basename="master" ref="../../../master/images/paint"/>
+      </dir>
+      <dir basename="plates" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="textures" username="pipeline" group="artist" perms="02775">
+        <link basename="master" ref="../../../master/images/textures"/>
+        <dir basename="3dPaintTextures" username="pipeline" group="artist" perms="02775"/>
+      </dir>
+      <dir basename="survey" username="pipeline" group="artist" perms="02775">
+        <dir basename="hdri" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="char" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="env" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="prop" username="pipeline" group="artist" perms="02775"/>
+      </dir>
     </dir>
-    <dir basename="houdini" username="pipeline" group="artist" perms="02775">
-      <dir basename ="dso" username="pipeline" group="artist" perms="02775"/>
-      <dir basename ="otls" username="pipeline" group="artist" perms="02775"/>
-      <dir basename ="scripts" username="pipeline" group="artist" perms="02775"/>
+
+    <!-- D A T A   F O L D E R -->
+    <dir name="Shot Data Folder" basename="data" username="pipeline" group="artist" perms="02775">
+      <dir basename="cache" username="pipeline" group="artist" perms="02775">
+        <dir basename="fluid" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="houdini" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="volumetrics" username="pipeline" group="artist" perms="02775"/>
+      </dir>
+      <dir basename="renderData" username="pipeline" group="artist" perms="02775">
+        <dir basename="depth" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="fur" username="pipeline" group="artist" perms="02775">
+          <dir basename="furFiles" username="pipeline" group="artist" perms="02775"/>
+          <dir basename="furShadowMap" username="pipeline" group="artist" perms="02775"/>
+          <dir basename="furAttrMap" username="pipeline" group="artist" perms="02775"/>
+          <dir basename="furImages" username="pipeline" group="artist" perms="02775"/>
+          <dir basename="furEqualMap" username="pipeline" group="artist" perms="02775"/>
+        </dir>
+        <dir basename="mentalRay" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="iprImages" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="shaders" username="pipeline" group="artist" perms="02775"/>
+      </dir>
+      <dir basename="particles" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="camera" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="chan" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="geo" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="lut" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="mocap" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="moco" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="timewarp" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="volumetrics" username="pipeline" group="artist" perms="02755">
+        <dir basename="particles" username="pipeline" group="artist" perms="02775" />
+        <dir basename="cache" username="pipeline" group="artist" perms="02775" />
+      </dir>
     </dir>
-    <dir basename="nuke" username="pipeline" group="artist" perms="02775">
-      <dir basename="gizmos" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="plugins" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="shelves" username="pipeline" group="artist" perms="02775"/>
+    <!-- T O O L S   F O L D E R -->
+    <dir basename="tools" username="pipeline" group="artist" perms="02775">
+      <dir basename="maya" username="pipeline" group="artist" perms="02775">
+        <dir basename="mel" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="python" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="shelves" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="modules" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="templates" username="pipeline" group="artist" perms="02775"/>
+      </dir>
+      <dir basename="houdini" username="pipeline" group="artist" perms="02775">
+        <dir basename ="dso" username="pipeline" group="artist" perms="02775"/>
+        <dir basename ="otls" username="pipeline" group="artist" perms="02775"/>
+        <dir basename ="scripts" username="pipeline" group="artist" perms="02775"/>
+      </dir>
+      <dir basename="nuke" username="pipeline" group="artist" perms="02775">
+        <dir basename="gizmos" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="plugins" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="shelves" username="pipeline" group="artist" perms="02775"/>
+      </dir>
+      <dir basename="scripts" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="vray" username="pipeline" group="artist" perms="02775"/>
     </dir>
-    <dir basename="scripts" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="vray" username="pipeline" group="artist" perms="02775"/>
+  <!-- S C E N E S   F O L D E R -->
+    <dir name="Shot Scenes Folder" basename="scenes" username="pipeline" group="artist" perms="02775">
+      <dir basename="track" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="anim" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="fx" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="light" username="pipeline" group="artist" perms="02775"/>
+      <!-- C O M P   F O L D E R -->
+      <dir name="Shot Comp Folder" basename="comp" username="pipeline" group="artist" perms="02755">
+        <dir basename="nuke" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="roto" username="pipeline" group="artist" perms="02775"/>
+      </dir>
+    </dir>
+    <dir basename=".autosave" username="pipeline" group="artist" perms="02777"/>
+  <!-- V O L U M E T R I C S   F O L D E R -->
+    <dir name="Shot Volumetrics Folder" basename="volumetrics" username="pipeline" group="artist" perms="02755">
+      <link basename="particles" ref="../data/volumetrics/particles/"/>
+      <link basename="cache" ref="../data/volumetrics/cache/"/>
+      <link basename="render" ref="../../../../media/{{sequence_name}}/{{shot_name}}/cg/volumetrics/"/>
+      <dir basename="options" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="scenes" username="pipeline" group="artist" perms="02775"/>
+    </dir>
+    <file basename="workspace.mel" username="pipeline" group="artist" perms="02775" href="workspace.mel"/>
+    <!-- P A I N T   F O L D E R -->
+    <link basename="paint" ref="./images/paint"/>
+    <!-- D E S I G N   F O L D E R -->
+    <link basename="design" ref="./images/design"/>
   </dir>
-<!-- S C E N E S   F O L D E R -->
-  <dir name="Shot Scenes Folder" basename="scenes" username="pipeline" group="artist" perms="02775">
-    <dir basename="track" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="anim" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="fx" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="light" username="pipeline" group="artist" perms="02775"/>
-    <!-- C O M P   F O L D E R -->
-    <dir name="Shot Comp Folder" basename="comp" username="pipeline" group="artist" perms="02755">
-      <dir basename="nuke" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="roto" username="pipeline" group="artist" perms="02775"/>
-    </dir>
-  </dir>
-  <dir basename=".autosave" username="pipeline" group="artist" perms="02777"/>
-<!-- V O L U M E T R I C S   F O L D E R -->
-  <dir name="Shot Volumetrics Folder" basename="volumetrics" username="pipeline" group="artist" perms="02755">
-    <link basename="particles" ref="../data/volumetrics/particles/"/>
-    <link basename="cache" ref="../data/volumetrics/cache/"/>
-    <link basename="render" ref="../../../../media/{{sequence_name}}/{{shot_name}}/cg/volumetrics/"/>
-    <dir basename="options" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="scenes" username="pipeline" group="artist" perms="02775"/>
-  </dir>
-  <file basename="workspace.mel" username="pipeline" group="artist" perms="02775" href="workspace.mel"/>
-  <!-- P A I N T   F O L D E R -->
-  <link basename="paint" ref="./images/paint"/>
-  <!-- D E S I G N   F O L D E R -->
-  <link basename="design" ref="./images/design"/>
+
+
 </dirtt>
