--- a/studio_2015/templates/project_master.xml
+++ b/studio_2015/templates/project_master.xml
@@ -43,6 +43,8 @@
       <dir basename="prop" username="pipeline" group="artist" perms="02775"/>
     </dir>
   </dir>
+  <!-- D E S I G N   F O L D E R -->
+  <dir basename="design" username="pipeline" group="artist" perms="02775"/>
   <!-- C O M P   F O L D E R -->
   <dir basename="comp" username="pipeline" group="pipeline" perms="02755">
     <link basename="lut" ref="../data/lut"/>
