--- a/studio_2015/templates/project_shot.xml
+++ b/studio_2015/templates/project_shot.xml
@@ -5,42 +5,45 @@
 
   <dir name="Shot Media Tree" basename="media/{{sequence_name}}/{{shot_name}}"  username="pipeline" group="artist" perms="02775">
     <!-- A U D I O   F O L D E R -->
-    <dir name="Audio Directory" basename="audio" username="pipeline" group="artist" perms="02775"/>
+    <dir basename="audio" username="pipeline" group="artist" perms="02775"/>
+
     <!-- C G   R E N D E R   F O L D E R -->
-    <dir name="CG Renders Directory" basename="cg" username="pipeline" group="artist" perms="02775">
+    <dir basename="cg" username="pipeline" group="artist" perms="02775">
       <dir basename="volumetrics" username="pipeline" group="artist" perms="02755">
         <dir basename="bty" username="pipeline" group="artist" perms="02775" />
         <dir basename="zt" username="pipeline" group="artist" perms="02775" />
         <dir basename="env" username="pipeline" group="artist" perms="02775" />
       </dir>
     </dir>
-    <dir basename="comp" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="precomp" username="pipeline" group="artist" perms="02775"/>
+
     <dir basename="ref" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="roto" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="paint" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="grade" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="scan" username="pipeline" group="artist" perms="02775"/>
+
+    <dir basename="design" username="pipeline" group="artist" perms="02775"/>
+
+    <dir basename="2d" username="pipeline" group="artist" perms="02775">
+      <dir basename="comp" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="precomp" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="roto" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="paint" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="grade" username="pipeline" group="artist" perms="02775"/>
+      <dir basename="scan" username="pipeline" group="artist" perms="02775"/>
+    </dir>
   </dir>
 
-  <dir name="Shot Tree" basename="work/{{sequence_name}}/{{shot_name}}"  username="pipeline" group="artist" perms="02775">
-    <!-- M E D I A   F O L D E R -->
-    <link basename="media" ref="../../../../media/{{sequence_name}}/{{shot_name}}"/>
+
+
+  <dir name="Shot Work Tree" basename="work/{{sequence_name}}/{{shot_name}}"  username="pipeline" group="artist" perms="02775">
+    <!-- A U D I O   F O L D E R -->
+    <link basename="audio" ref="../../../media/{{sequence_name}}/{{shot_name}}/audio"/>
 
     <!-- I M A G E S   F O L D E R -->
     <dir basename="images" username="pipeline" group="supervisor" perms="02775">
-      <link basename="master" ref="../../master/images"/>
-      <dir basename="cg" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="comp" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="design" username="pipeline" group="artist" perms="02775">
-        <link basename="master" ref="../../../master/images/design"/>
-      </dir>
-      <dir basename="paint" username="pipeline" group="artist" perms="02775">
-        <link basename="master" ref="../../../master/images/paint"/>
-      </dir>
-      <dir basename="plates" username="pipeline" group="artist" perms="02775"/>
+      <link basename="master" ref="../../../../master/images"/>
+      <link basename="cg" ref="../../../../media/{{sequence_name}}/{{shot_name}}/cg"/>
+      <link basename="2d" ref="../../../../media/{{sequence_name}}/{{shot_name}}/2d"/>
+      <link basename="ref" ref="../../../../media/{{sequence_name}}/{{shot_name}}/ref"/>
+      <link basename="design" ref="../../../../media/{{sequence_name}}/{{shot_name}}/design"/>
       <dir basename="textures" username="pipeline" group="artist" perms="02775">
-        <link basename="master" ref="../../../master/images/textures"/>
         <dir basename="3dPaintTextures" username="pipeline" group="artist" perms="02775"/>
       </dir>
       <dir basename="survey" username="pipeline" group="artist" perms="02775">
@@ -94,9 +97,9 @@
         <dir basename="templates" username="pipeline" group="artist" perms="02775"/>
       </dir>
       <dir basename="houdini" username="pipeline" group="artist" perms="02775">
-        <dir basename ="dso" username="pipeline" group="artist" perms="02775"/>
-        <dir basename ="otls" username="pipeline" group="artist" perms="02775"/>
-        <dir basename ="scripts" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="dso" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="otls" username="pipeline" group="artist" perms="02775"/>
+        <dir basename="scripts" username="pipeline" group="artist" perms="02775"/>
       </dir>
       <dir basename="nuke" username="pipeline" group="artist" perms="02775">
         <dir basename="gizmos" username="pipeline" group="artist" perms="02775"/>
@@ -129,9 +132,9 @@
     </dir>
     <file basename="workspace.mel" username="pipeline" group="artist" perms="02775" href="workspace.mel"/>
     <!-- P A I N T   F O L D E R -->
-    <link basename="paint" ref="./images/paint"/>
+    <dir basename="paint" username="pipeline" group="artist" perms="02775"/>
     <!-- D E S I G N   F O L D E R -->
-    <link basename="design" ref="./images/design"/>
+    <dir basename="design" username="pipeline" group="artist" perms="02775"/>
   </dir>
 
 
