--- a/studio_2015/templates/project_media.xml
+++ b/studio_2015/templates/project_media.xml
@@ -7,7 +7,7 @@
 
   <!-- S U P P L I E D   F O L D E R -->
   <dir name="Supplied Media Directory" basename="supplied" username="pipeline" group="artist" perms="02775">
-    <dir name="Supplied Template" basename="_YYYYMMDD_description" username="pipeline" group="artist" perms="02775"/>
+    <dir name="Supplied Template" basename="_YYYY-MM-DD_description" username="pipeline" group="artist" perms="02775"/>
   </dir>
 
 </dirtt>
