--- a/studio_2015/templates/project_production.xml
+++ b/studio_2015/templates/project_production.xml
@@ -1,62 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE dirtt PUBLIC "-//STUDIO//DTD dirtt 0.2.0//EN" "http://robmoggach.github.io/python-dirtt/dtds/dirtt.dtd">
 <dirtt name="Production Tree" version="0.2.0" dirname="{{project_root}}/{{project_path}}" basename="production" username="pipeline" group="production" perms="02775">
-  <!-- E D I T S   F O L D E R -->
-  <dir basename="edits" username="pipeline" group="production" perms="02777">
-    <dir basename="_yyyy_mm_dd_template" username="pipeline" group="artist" perms="02777">
-      <dir basename="edl" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="movies" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="images" username="pipeline" group="artist" perms="02775"/>
-    </dir>
-  </dir>
-  <!-- P O S T I N G S   F O L D E R -->
-  <dir basename="postings" username="pipeline" group="production" perms="02777">
-    <dir basename="_yyyy_mm_dd_template" username="pipeline" group="artist" perms="02777">
-      <dir basename="other" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="movies" username="pipeline" group="artist" perms="02775"/>
-      <dir basename="images" username="pipeline" group="artist" perms="02775"/>
-    </dir>
-  </dir>
   <!-- C R E A T I V E   F O L D E R -->
-  <dir basename="creative" username="pipeline" group="production" perms="02777">
-    <dir basename="animatic" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="storyboard" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="script" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="breakdown" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="treatment" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="reference" username="pipeline" group="artist" perms="02775">
-      <dir basename="client" username="pipeline" group="production" perms="02775"/>
-      <dir basename="development" username="pipeline" group="artist" perms="02777"/>
-    </dir>
+  <dir basename="Creative" username="pipeline" group="production" perms="02777">
+    <link basename="Scripts" ref="../Business/Bid/Scripts"/>
+    <link basename="Boards" ref="../Business/Bid/Boards"/>
+    <link basename="Animatic" ref="../WIP/Animatic"/>
+    <link basename="Methodology" ref="../Business/Bid/Methodology"/>
+    <link basename="Treatment" ref="../Business/Bid/Treatments"/>
+    <link basename="Reference" ref="../../master/images/ref"/>
   </dir>
+
+  <dir basename="Client_IN" name="Client_In">
+      <dir basename="_YYYY-MM-DD_description" name="_YYYY-MM-DD_description"/>
+  </dir>
+
+  <dir basename="Client_OUT" name="Client_Out">
+      <dir basename="_YYYY-MM-DD_description" name="_YYYY-MM-DD_description"/>
+  </dir>
+
+  <dir basename="Shot_Sheets" name="Shot_Sheets"/>
+
+  <dir basename="WIP" name="WIP">
+      <dir basename="Animatic" name="Animatic">
+          <dir basename="Approved" name="Approved"/>
+      </dir>
+      <dir basename="Boardomatic" name="Boardomatic">
+          <dir basename="Approved" name="Approved"/>
+      </dir>
+      <dir basename="Previs" name="Previs">
+          <dir basename="Approved" name="Approved"/>
+      </dir>
+      <dir basename="VFX_WIP" name="VFX_WIP">
+          <dir basename="Approved" name="Approved"/>
+      </dir>
+  </dir>
+
   <!-- F I N A N C I A L   F O L D E R -->
-  <dir basename="business" username="pipeline" group="production" perms="02770">
-    <dir basename="bid" username="pipeline" group="production" perms="02770"/>
-    <dir basename="legal" username="pipeline" group="production" perms="02770">
-      <dir basename="contracts" username="pipeline" group="production" perms="02770"/>
-      <dir basename="nda" username="pipeline" group="production" perms="02770"/>
+  <dir basename="Business" username="pipeline" group="production" perms="02770">
+    <dir basename="Bid" name="Bid">
+        <dir basename="Boards" name="Boards"/>
+        <dir basename="Financial" name="Financial"/>
+        <dir basename="Methodology" name="Methodology"/>
+        <dir basename="Reference" name="Reference"/>
+        <dir basename="Schedule" name="Schedule"/>
+        <dir basename="Scripts" name="Scripts"/>
+        <dir basename="Treatments" name="Treatments"/>
     </dir>
-    <dir basename="invoices" username="pipeline" group="production" perms="02770"/>
-    <dir basename="purchases" username="pipeline" group="production" perms="02770"/>
-    <dir basename="budget" username="pipeline" group="production" perms="02770"/>
+    <dir basename="Actual">
+        <dir basename="Budgets"/>
+        <dir basename="Expenses"/>
+        <dir basename="Purchases"/>
+        <dir basename="Forecast"/>
+        <dir basename="Invoices"/>
+        <dir basename="Overages"/>
+        <dir basename="Reports"/>
+    </dir>
+    <dir basename="Legal" name="Legal">
+      <dir basename="Contracts" username="pipeline" group="production" perms="02770"/>
+      <dir basename="NDA" username="pipeline" group="production" perms="02770"/>
+    </dir>
+    <dir basename="Crew" name="Crew">
+        <dir basename="Freelance" name="Freelance"/>
+        <dir basename="Hires" name="Hires"/>
+        <dir basename="Invoices" name="Invoices"/>
+        <dir basename="NDA" name="NDA"/>
+        <dir basename="Staffing" name="Staffing"/>
+        <dir basename="Timecards" name="Timecards"/>
+    </dir>
   </dir>
-  <!-- G R A P H I C S   F O L D E R -->
-  <dir basename="graphics" username="pipeline" group="artist" perms="02775">
-    <dir basename="logos" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="endtags" username="pipeline" group="artist" perms="02775"/>
-    <dir basename="legals" username="pipeline" group="artist" perms="02775"/>
-    <link basename="fonts" ref="../../master/data/fonts"/>
+  <dir basename="Notes" name="Notes">
+      <dir basename="Agency" name="Agency"/>
+      <dir basename="Client" name="Client"/>
+      <dir basename="Editorial" name="Editorial"/>
+      <dir basename="Internal" name="Internal"/>
+      <dir basename="Production" name="Production"/>
   </dir>
-  <!-- A U D I O   F O L D E R -->
-  <dir basename="audio" username="pipeline" group="artist" perms="02775"/>
-  <!-- S L A T E S   F O L D E R -->
-  <dir basename="slates" username="pipeline" group="production" perms="02777"/>
-  <!-- N O T E S   F O L D E R -->
-  <dir basename="notes" username="pipeline" group="production" perms="02775"/>
-  <!-- S H O T S H E E T S   F O L D E R -->
-  <dir basename="shotsheets" username="pipeline" group="production" perms="02775">
-    <dir basename="frames" username="pipeline" group="artist" perms="02775"/>
-  </dir>
-  <!-- S C H E D U L E   F O L D E R -->
-  <dir basename="schedule" username="pipeline" group="production" perms="02775"/>
 </dirtt>
